step-web/src/main/webapp/scss/passage_options.scss
@import 'template_variables';
@import 'mixins';
@import 'warning_messages';

.passageOptionsGroup {
  border-bottom: 1px solid $border-color;
  padding: 5px $page-padding;
  opacity: .3;
  background-color: white;
  background-color: var(--clrBackground);
  @include clearfix;

  [dir='rtl'] a {
    text-align: right;
    & > span:first-child {
      margin-right: 20px;
    }
  }

  .closeColumn.disabled {
    cursor: not-allowed;
    pointer-events: none;
    opacity: .5;

    &:hover, &:active {
      background-position: inherit;
    }
  }

  //buttons to the right are above the middle overflow
  .btn-group.pull-right {
    z-index: 30;
  }

  button span {
    line-height: 1;
    &.smallerFont {
      font-size: 8px;
      line-height: $defaultFontSize;
    }
    &.largerFont {
      font-weight: bold;
    }
  }

  // icons
  a {
    color: $text-color;
    cursor: pointer;
    font-size: $panel-icon-size;
    line-height: 28px;
    padding: 5px 0 5px 15px;
    position: relative;
    top: 1px;

    &:hover, &:focus {
      text-decoration: none;
      background-color: $secondaryHoverColour;
      color: black;
    }
  }

  .dropdown-menu {
    min-width: 180px;
    padding-top: 0;

    h2 {
      font-size: 14px;
      margin: 10px 8px 4px;
    }

    a {
      display: block;
    }

    a,
    .noHighlight {
      line-height: 20px;
      padding-left: 12px;
    }

    .noHighlight {
      color: #5D5D5D;
      padding-top: 5px;
      padding-bottom: 5px;
    }

    ul {
      margin-bottom: 0;
      padding-left: 0;
      list-style: none;
    }

    li {
      font-size: 14px;
      padding-right: 5px;

      &:hover {
        background-color: $secondaryHoverColour;
      }

      &.contextContainer {
        min-width: 220px;

        button {
          padding: 5px 7px;
        }
        &:hover {
          background-color: inherit;
        }
      }
      &.noHighlight {
        @include clearfix;

        &:hover {
          background-color: inherit;
        }
      }
    }
  }

  .dropdown-share + .dropdown-menu > ul > li {
    float: left;
    padding: 10px 0 0 10px;

    &:hover {
      background-color: transparent;
    }
  }

  .nested-btn-group {
    float: left;
    margin-left: -1px;
  }
  .passageOptions, .displayModes {
    direction: ltr;
    text-align: left;

    //sub groups in the dropdown
    .panel {
      border: none;
      border-radius: 0px;
      box-shadow: none;
      -webkit-box-shadow: none;

      a {
        cursor: pointer;

        &:hover {
          background-color: $secondaryHoverColour;
          color: var(--clrText);
        }
      }

      .caret {
        float: right;
        margin-right: 15px;
        margin-top: 8px;
      }

      .panel-body {
        padding: 0;

        a {
          padding-left: 24px;
        }
      }
    }
  }

  .argSummary {
    margin: 0;
    max-width: 100%;
    overflow: hidden;
    white-space: nowrap;
  }
}

.nextPreviousChapterGroup {
  .previousChapter,
  .nextChapter {
    // display is set to none be default so these don't show up on mobile devices; otherwise,
    // these buttons will be set appropriately in view_menu_passage's _updateVisibleDropdown:
    // function.
    display: none;

    position: absolute;
    top: auto;
    bottom: 35px;
    z-index: 1;
    padding: 12px;
    background-color: white;
    background-color: var(--clrBackground);
    border-radius: 100%;
    box-shadow: 0 0 5px;

    .glyphicon {
      top: 0;
    }
  }

  .previousChapter {
    left: 20px;
  }

  .nextChapter {
    right: 20px;
  }
}

